@@ -2,7 +2,7 @@ Joose = function () { throw "Modules may not be instantiated." }
 
 Joose.top           = this
 
-Joose.VERSION       = 3.007
+Joose.VERSION       = 3.008
 Joose.AUTHORITY     = 'jsan:NPLATONOV'
 
 
@@ -177,4 +177,11 @@ try {
     Joose.is_IE = /msie/i.test(navigator.userAgent) && !/opera/i.test(navigator.userAgent)
 } catch (e) {
     Joose.is_IE = false
+}
+
+
+try {
+    Joose.is_NodeJS = Boolean(process.argv[0])
+} catch (e) {
+    Joose.is_NodeJS = false
 }
