@@ -11,14 +11,16 @@ Joose.Namespace.Manager = new Joose.Managed.Class('Joose.Namespace.Manager', {
     methods : {
         
         initialize : function () {
-            var global = this.global = new Joose.Namespace.Keeper('').c
+            var globalKeeper = this.global = new Joose.Namespace.Keeper('').c
             
-            var globalNs = this.globalNs = global.meta.ns
+            var globalNs = this.globalNs = globalKeeper.meta.ns
             
-            globalNs.container      = Joose.top
-            global.meta.parentNs    = global
             
-            this.current = [ global ]
+            globalNs.container      = Joose.is_NodeJS && global || Joose.top
+
+            globalKeeper.meta.parentNs    = globalKeeper
+            
+            this.current = [ globalKeeper ]
         },
         
         
@@ -51,6 +53,12 @@ Joose.Namespace.Manager = new Joose.Managed.Class('Joose.Namespace.Manager', {
         create : function (nsName, metaClass, extend) {
             //if no name provided, then we creating an anonymous class, so just skip all the namespace manipulations
             if (!nsName) return new metaClass(nsName, extend).c
+            
+            var me = this
+            
+            if (/^\./.test(nsName)) return this.executeIn(this.global, function () {
+                return me.create(nsName.replace(/^\./, ''), metaClass, extend)
+            })
             
             props = extend || {}
             
@@ -189,6 +197,9 @@ Joose.Namespace.Manager = new Joose.Managed.Class('Joose.Namespace.Manager', {
                 
                 if (!Joose.top[helperName]) Joose.top[helperName]  = helper
                 if (!Joose[helperName])     Joose[helperName]      = helper
+                
+                // declaring NodeJS global
+                if (Joose.is_NodeJS && !global[helperName]) global[helperName]      = helper
             } else {
                 var methods = {}
                 
